# robofleet

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 99820e7ed332_initial.py
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: auth.py  missions.py  robots.py  websocket.py
app/core/: config.py  security.py  websocket.py
app/models/: __init__.py  mission.py  robot.py  user.py
scripts/: run-demo.sh  ws_client.py
tests/: conftest.py
